--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start-dev": "webpack serve --mode=development",
     "build": "run-s clean build-only",
     "build-only": "webpack --mode=production",
-    "start": "webpack-dev-server --mode=production",
+    "start": "webpack --mode=production",
     "clean": "rimraf dist"
   },
   "dependencies": {
@@ -21,6 +21,6 @@
     "typescript": "^4.4.4",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.7.3"
   }
 }
