--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start-dev": "webpack serve --mode=development",
     "build": "run-s clean build-only",
     "build-only": "webpack --mode=production",
-    "start": "webpack --mode=production",
+    "start": "webpack",
     "clean": "rimraf dist"
   },
   "dependencies": {
