--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
   },
   "dependencies": {
     "gsap": "^3.9.1",
-    "pixi.js": "^6.2.0"
+    "pixi.js": "^6.2.0",
+    "copy-webpack-plugin": "^9.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^5.2.5",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^9.1.0",
