--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "license": "",
+  "main": "server.js",
   "scripts": {
-    "start-dev": "webpack serve --mode=development",
-    "build": "run-s clean build-only",
-    "build-only": "webpack --mode=production",
-    "start": "webpack build",
-    "clean": "rimraf dist"
+    "dev": "webpack serve --mode=development",
+    "start": "node server.js",
+    "build": "webpack --mode production"
   },
   "dependencies": {
-    "gsap": "^3.9.1",
-    "pixi.js": "^6.2.0",
     "copy-webpack-plugin": "^9.1.0",
-    "html-webpack-plugin": "^5.5.0",
+    "express": "^4.17.2",
+    "gsap": "^3.9.1",
     "npm-run-all": "^4.1.5",
+    "pixi.js": "^6.2.0",
     "rimraf": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^9.1.0",
+    "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
@@ -30,7 +30,7 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.1",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
   }
 }
