--- a/package.json
+++ b/package.json
@@ -7,15 +7,9 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^9.1.0",
     "express": "^4.17.2",
     "gsap": "^3.9.1",
-    "npm-run-all": "^4.1.5",
-    "pixi.js": "^6.2.0",
-    "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^5.2.5",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4"
+    "pixi.js": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
