--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,27 +5,25 @@
         "sourceMap": true,
         "target": "es2015",
         "module": "ESNext",
-    
         // Rules for your code
         "strict": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noUnusedParameters": false,
-        "noUnusedLocals": true,
+        "noUnusedLocals": false,
         "noFallthroughCasesInSwitch": true,
         "noImplicitOverride": true,
-        "strictPropertyInitialization":false,
-
+        "strictPropertyInitialization": false,
         // Settings for linking source files
         "moduleResolution": "node",
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
-
     },
     // Folder for your code
     "include": [
-        "./src/**/*"
-, "server.js"    ]
+        "./src/**/*",
+        "server.js"
+    ]
 }
