bugs in match end popup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         // Rules for your code
         "strict": true,
         "noImplicitAny": true,
-        "noImplicitReturns": true,
+        "noImplicitReturns": false,
         "noUnusedParameters": false,
         "noUnusedLocals": false,
         "noFallthroughCasesInSwitch": true,
