--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@pixi/filter-drop-shadow": "^4.1.5",
+    "@pixi/filter-glow": "^4.1.5",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "gsap": "^3.9.1",
-    "pixi.js": "^6.2.0",
-    "pixi-particles": "^4.2.0"
+    "pixi-filters": "^4.1.6",
+    "pixi-particles": "^4.2.0",
+    "pixi.js": "^6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
