--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pixi/filter-drop-shadow": "^4.1.5",
     "@pixi/filter-glow": "^4.1.5",
+    "@pixi/filter-shockwave": "^4.1.5",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "gsap": "^3.9.1",
